opam-version: "2.0"
version: "0.2.0"
maintainer: "mail@fabianbonk.de"
authors: ["Fabian Bonk"]
homepage: "https://github.com/ixy-languages/ixy.ml"
bug-reports: "https://github.com/ixy-languages/ixy.ml/issues"
dev-repo: "git://github.com/ixy-languages/ixy.ml.git"
license: "ISC"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ppx_cstruct"
  "dune" {build}
]
synopsis: "The ixy.ml network driver"
