opam-version: "2.0"
version: "0.0.1"
maintainer: "mail@fabianbonk.de"
authors: ["Fabian Bonk"]
homepage: "https://github.com/ixy-languages/ixy.ml"
bug-reports: "https://github.com/ixy-languages/ixy.ml/issues"
dev-repo: "git://github.com/ixy-languages/ixy.ml.git"
license: "ISC"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "4.06.0" }
  "ixy-core"
  "dune" {build}
]
available: [ os = "linux" ]
synopsis: "Standalone version of ixy.ml for Linux"
