opam-version: "1.2"
version: "0.0.1"
maintainer: "mail@fabianbonk.de"
authors: ["Fabian Bonk"]
homepage: "https://github.com/ixy-languages/ixy.ml"
bug-reports: "https://github.com/ixy-languages/ixy.ml/issues"
dev-repo: "git://github.com/ixy-languages/ixy.ml.git"
license: "ISC"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ixy"
  "macaddr"
  "mirage-net-lwt" {>= "2.0.0"}
  "cstruct"
  "ppx_cstruct"
  "dune" {build}
]
available: [ocaml-version >= "4.06.0"]
synopsis: "ixy.ml implementation of the Mirage_net_lwt interface"
