opam-version: "2.0"
version: "0.2.0"
maintainer: "mail@fabianbonk.de"
authors: ["Fabian Bonk"]
homepage: "https://github.com/ixy-languages/ixy.ml"
bug-reports: "https://github.com/ixy-languages/ixy.ml/issues"
dev-repo: "git://github.com/ixy-languages/ixy.ml.git"
license: "ISC"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "4.06.0" }
  "ixy-core"
  "macaddr"
  "mirage"
  "mirage-net"
  "mirage-pci"
  "cstruct"
  "ppx_cstruct"
  "dune" {build}
]
synopsis: "The ixy.ml implementation of the Mirage_net.S interface"
