(executable
 (name echo)
 (public_name ixy-echo)
 (modes native)
 (libraries ixy)
 (ocamlopt_flags :standard -O3)
 (modules echo))

(executable
 (name fwd)
 (public_name ixy-fwd)
 (modes native)
 (libraries ixy)
 (ocamlopt_flags :standard -O3)
 (modules fwd))

(executable
 (name pktgen)
 (public_name ixy-pktgen)
 (modes native)
 (libraries core cstruct ixy)
 (preprocess (pps ppx_cstruct))
 (ocamlopt_flags :standard -O3)
 (modules pktgen))
