(executable
 (name echo)
 (public_name ixy-echo)
 (modes native)
 (libraries ixy)
 (flags :standard -w A-42-44)
 (ocamlopt_flags -O3)
 (modules echo))

(executable
 (name fwd)
 (public_name ixy-fwd)
 (modes native)
 (libraries ixy)
 (flags :standard -w A-42-44)
 (ocamlopt_flags -O3)
 (modules fwd))

(executable
 (name pktgen)
 (public_name ixy-pktgen)
 (modes native)
 (libraries ixy)
 (preprocess (pps ppx_cstruct))
 (flags :standard -w A-42-44)
 (ocamlopt_flags -O3)
 (modules pktgen))
