(executable
 (name echo)
 (public_name ixy-echo)
 (modes native)
 (libraries ixy-freestanding)
 (preprocess (pps ppx_cstruct))
 (flags :standard -w A-42-44-45)
 (ocamlopt_flags -O3)
 (modules echo)
 (package ixy-freestanding))

(executable
 (name fwd)
 (public_name ixy-fwd)
 (modes native)
 (libraries ixy-freestanding)
 (preprocess (pps ppx_cstruct))
 (flags :standard -w A-42-44-45)
 (ocamlopt_flags -O3)
 (modules fwd)
 (package ixy-freestanding))

(executable
 (name pktgen)
 (public_name ixy-pktgen)
 (modes native)
 (libraries ixy-freestanding)
 (preprocess (pps ppx_cstruct))
 (flags :standard -w A-42-44-45)
 (ocamlopt_flags -O3)
 (modules pktgen)
 (package ixy-freestanding))
