(executable
 (name check_nic)
 (modes native)
 (libraries core cstruct ixy)
 (modules check_nic))

(executable
 (name uname)
 (modes native)
 (libraries ixy)
 (modules uname))

(executable
 (name pci_config)
 (modes native)
 (libraries ixy)
 (modules pci_config))

(executable
 (name blink)
 (modes native)
 (libraries ixy)
 (modules blink))

(executable
 (name parse_pci_addr)
 (modes native)
 (libraries ixy)
 (modules parse_pci_addr))

(executable
 (name pagesize)
 (modes native)
 (libraries ixy)
 (modules pagesize))
